'네이티브 SQL'에 대한 내용 추가

--- a/docs/10/05.md
+++ b/docs/10/05.md
@@ -191,5 +191,203 @@ FROM A, B
 |------|----------|
 | name | 결과 컬럼명 |
 
+
+## 5.2 Named 네이티브 SQL
+
+- JPQL처럼 네이티브 SQL도 Named 네이티브 SQL을 사용해서 정적 SQL을 작성할 수 있다.
+
+```java
+@Entity
+@NamedNativeQuery(
+        name = "Member.memberSQL",
+        query = "SELECT ID, AGE, NAME, TEAM_ID " +
+                "FROM MEMBER WHERE AGE > ?",
+        resultClass = Member.class
+)
+public class Member { /**/ }
+```
+
+```
+// 사용할 떄
+TypedQuery<Member> nativeQuery = em.createNamedQuery("Member.memberSQL", Member.class)
+                                   .setParameter(1, 20);
+```
+
+- JPQL Named 쿼리와 같은 `createNamedQuery` 메서드를 사용해 `TypedQuery`를 사용할 수 있다.
+
+```java
+// 결과 매핑 사용
+@Entity
+@SqlResultSetMapping(name="memberWithOrderCount",
+    entities = {@EntityResult(entityClass = Member.class)},
+    columns = {@ColumnResult(name = "ORDER_COUNT")})
+@NamedNativeQuery(
+    name = "Member.memberWithOrderCount",
+    query = "SELECT M.ID, AGE, NAME, TEAM_ID, I.ORDER_COUNT " +
+            "FROM MEMBER M " +
+            "LEFT JOIN " +
+            "  (SELECT IM.ID, COUNT(*) AS ORDER_COUNT " +
+            "   FROM ORDER O, MEMBER IM " +
+            "   WHERE O.MEMBER_ID = IM.ID) I " +
+            "ON M.ID = I.ID",
+    resultSetMapping = "memberWithOrderCount"
+)
+public class Member { /**/ }
+```
+
+```
+List<Object[]> resultList = em.createNamedQuery("Member.memberWithOrderCount")
+                              .getResultList();
+```
+
+### @NamedNativeQuery
+
+| 속성              | 기능                |
+|------------------|-------------------|
+| name             | 네임드 쿼리 이름 (필수) |
+| query            | SQL 쿼리 (필수)      |
+| hints            | 벤더 종속적인 힌트      |
+| resultClass      | 결과 클래스           |
+| resultSetMapping | 결과 매핑 사용         |
+
+
+## 5.3 네이티브 SQL XML에 정의
+
+```xml
+<!-- ormMember.xml -->
+<entity-mappings>
+    <named-native-query name="Member.memberWithOrderCountXml"
+        result-set-mapping="memberWithOrderCountResultMap">
+        <query><CDATA[
+            SELECT M.ID, AGE, NAME, TEAM_ID, I.ORDER_COUNT
+            FROM MEMBER M
+            LEFT JOIN
+                (SELECT IM.ID, COUNT(*) AS ORDER_COUNT
+                 FROM ORDERS O, MEMBER IM
+                 WHERE O.MEMBER_ID = IM.ID) I
+            ON M.ID = I.ID
+        ]></query>
+    </named-native-query>
+    
+    <sql-resut-set-mapping name="memberWithOrderCountResultMap">
+        <entity-result entity-class="jpabook.domain.Member" />
+        <column-result name="ORDER_COUNT" />
+    </sql-resut-set-mapping>
+</entity-mappings>
+```
+
+- XML에 정의할 땐 순서를 지켜야 한다.
+    1. `<named-native-query>`
+    2. `<sql-result-set-mapping>`
+    
+
+## 5.4 네이티브 SQL 정리
+
+- 네이티브 SQL도 JPQL과 마찬가지로 `Query`, `TypeQuery`를 반환한다.
+- 따라서 JPQL API를 그대로 사용할 수 있다.
+
+```
+// 네이티브 SQL과 페이징 처리
+String sql = "SELECT ID, AGE, NAME, TEAM_ID FROM MEMBER";
+Query nativeQuery = em.createNativeQuery(sql, Member.class)
+    .setFirstResult(10)
+    .setMaxResults(20)
+```
+
+
+## 5.5 스토어드 프로시저(JPA 2.1)
+
+### 스토어드 프로시저 사용
+
+- 입력 값을 두 배로 증가시켜주는 `proc_multiply`라는 스토어드 프로시저가 있다.
+- 이 프로시저는 첫 번째 파라미터로 값을 입력 받고 두 번째 파라미터로 결과를 반환한다.
+
+```
+DELIMITER //
+
+CREATE PROCEDURE proc_multiply (INOUT inParam INT, INOUT outParam INT)
+BEGIN
+    SET outParam = inParam * 2;
+END //
+```
+
+```
+// 순서 기반 파라미터 호출 
+StoredProcedureQuery spq = em.createStoredProcedureQeury("proc_multiply");
+spq.registerStoredProcedureParameter(1, Integer.class, ParameterMode.IN);
+spq.registerStoredProcedureParameter(2, Integer.class, ParameterMode.OUT);
+
+spq.setParameter(1, 100);
+spq.execute();
+
+Integer out = (Integer)spq.getOutputParameterValue(2);
+System.out.println("out = " + out); // 결과 = 200
+```
+
+```
+public enum ParameterMode {
+    IN,         // INPUT 파라미터
+    INOUT,      // INPUT, OUTPUT 파라미터
+    OUT,        // OUTPUT 파라미터
+    REF_CURSOR  // CURSOR 파라미터
+}
+```
+
+- 파라미터에 순서 대신 이름을 사용할 수도 있다.
+
+```
+// 파라미터에 이름 사용 
+StoredProcedureQuery spq = em.createStoredProcedureQeury("proc_multiply");
+spq.registerStoredProcedureParameter("inParam", Integer.class, ParameterMode.IN);
+spq.registerStoredProcedureParameter("outParam", Integer.class, ParameterMode.OUT);
+
+spq.setParameter("inParam", 100);
+spq.execute();
+
+Integer out = (Integer)spq.getOutputParameterValue("outParam");
+System.out.println("out = " + out); // 결과 = 200
+```
+
+### Named 스통어드 프로시저 사용
+
+- 스토어드 프로시저 쿼리에 이름을 부여해서 사용하는 것을 Named 스토어드 프로시저라 한다.
+
+```java
+@NamedStoredProcedureQuery(
+        name = "multiply",
+        procedureName = "proc_multiply",
+        parameters = {
+                @StoredProcedureParameter(name = "inParam", 
+                        mode = ParameterMode.IN, type = Integer.class),
+                @StoredProcedureParameter(name = "outParam", 
+                        mode = ParameterMode.OUT, type = Integer.class)
+        }
+)
+@Entity
+public class Member { /**/ }
+```
+
+- 둘 이상을 정의하려면 `@NamedStoredProcedureQueries`를 사용하면 된다.
+
+```xml
+<?xml version="1.0" encoding="UTF-8" ?>
+<entity-mappings xmlns="http://java.sun.com/xml/ns/persistence/orm" version="2.1">
+    <named-stored-procedure-query name="multiply" procedure-name="proc_multiply">
+        <parameter name="inParam" mode="IN" class="java.lang.Integer" />
+        <parameter name="outParam" mode="OUT" class="java.lang.Integer" />
+    </named-stored-procedure-query>
+</entity-mappings>
+```
+
+```
+StoredProcedureQuery spq = em.createNamedStoredProcedureQuery("multiply");
+
+spq.setParameter("inParam", 100);
+spq.execute();
+
+Integer out = (Integer) spq.getOutputParameterValue("outParam");
+System.out.println("out = " + out);
+```
+
 -----
 [Home](./index.md)
